i9100g: use androids ramconsole
Change-Id: I4d48bc84720994ae473dc962150dd564e5888578

--- a/arch/arm/configs/cyanogenmod_i9100g_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100g_defconfig
@@ -346,10 +346,8 @@ CONFIG_SAMSUNG_KERNEL_DEBUG=y
 CONFIG_SAMSUNG_USE_GETLOG=y
 CONFIG_SAMSUNG_ADD_GAFORENSICINFO=y
 CONFIG_SAMSUNG_USE_LOGGER_ADDON=y
-# CONFIG_SAMSUNG_PRINT_PLATFORM_LOG is not set
-CONFIG_SAMSUNG_USE_SEC_LOG_BUF=y
-CONFIG_SAMSUNG_USE_LAST_SEC_LOG_BUF=y
-CONFIG_SAMSUNG_REPLACE_LAST_KMSG=y
+CONFIG_SAMSUNG_PRINT_PLATFORM_LOG=y
+# CONFIG_SAMSUNG_USE_SEC_LOG_BUF is not set
 
 #
 # SAMSUNG Common Debugging Features
@@ -2226,7 +2224,14 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
-# CONFIG_ANDROID_RAM_CONSOLE is not set
+CONFIG_ANDROID_RAM_CONSOLE=y
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
+CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
+# CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -2696,6 +2701,9 @@ CONFIG_ZLIB_DEFLATE=y
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
