i9100g: update modem if driver
Change-Id: Iffbd654560be92457ee91880e0c560f8df3bbbaf
Source: GT-I9100G_SEA_JB_Opensource.zip

--- a/arch/arm/configs/cyanogenmod_i9100g_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100g_defconfig
@@ -1058,16 +1058,26 @@ CONFIG_FACTORY_PBA_JACK_TEST_SUPPORT=y
 # Texas Instruments shared transport line discipline
 #
 # CONFIG_TI_ST is not set
+# CONFIG_ST_GPS is not set
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
-CONFIG_SEC_MODEM=y
-CONFIG_UMTS_LINK_MIPI=y
-# CONFIG_UMTS_LINK_HSIC is not set
+# CONFIG_SEC_MODEM is not set
 CONFIG_UMTS_MODEM_XMM6260=y
-# CONFIG_CDMA_LINK_DPRAM is not set
 # CONFIG_CDMA_MODEM_CBP71 is not set
-# CONFIG_LTE_LINK_USB is not set
 # CONFIG_LTE_MODEM_CMC221 is not set
+CONFIG_SEC_MODEM_V2=y
+# CONFIG_UMTS_MODEM_XMM6262 is not set
+# CONFIG_CDMA_MODEM_CBP72 is not set
+# CONFIG_CDMA_MODEM_MDM6600 is not set
+# CONFIG_GSM_MODEM_ESC6270 is not set
+# CONFIG_TDSCDMA_MODEM_SPRD8803 is not set
+CONFIG_LINK_DEVICE_MIPI=y
+# CONFIG_LINK_DEVICE_DPRAM is not set
+# CONFIG_LINK_DEVICE_USB is not set
+# CONFIG_LINK_DEVICE_HSIC is not set
+# CONFIG_LINK_DEVICE_C2C is not set
+# CONFIG_LINK_DEVICE_SPI is not set
+# CONFIG_WORKQUEUE_FRONT is not set
 
 #
 # Motion Sensors Support
