--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -612,6 +612,7 @@ source "drivers/misc/ti-st/Kconfig"
 source "drivers/misc/lis3lv02d/Kconfig"
 source "drivers/misc/carma/Kconfig"
 source "drivers/misc/modem_if/Kconfig"
+source "drivers/misc/modem_if_v2/Kconfig"
 source "drivers/misc/mpu3050/Kconfig"
 
 endif # MISC_DEVICES
