--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -55,6 +55,7 @@ obj-$(CONFIG_APANIC)		+= apanic.o
 obj-$(CONFIG_SENSORS_AK8975)	+= akm8975.o
 obj-$(CONFIG_MPU_333_ENABLE)				+= mpu3050/
 obj-$(CONFIG_SEC_MODEM)		+= modem_if/
+obj-$(CONFIG_SEC_MODEM_V2)		+= modem_if_v2/
 obj-$(CONFIG_USB_SWITCH_FSA9480)	+= fsa9480.o
 obj-$(CONFIG_OMAP_DIE_TEMP_SENSOR)	+= omap_temp_sensor.o
 obj-$(CONFIG_OMAP_4430_TEMP_SENSOR)	+= omap4430_temp_sensor.o
